# messenger-server

./: CMakeLists.txt  README.md  admin_panel.py  config.json  test_client1.py
db/: init.sql
src/: core.cpp  core.h  crypto.cpp  crypto.h  database.cpp  database.h  main.cpp  protocol.cpp  protocol.h  transport.cpp  transport.h  types.h
